Support pkcs11 URIs for sslkey and sslcert strings
Parse sslkey and sslcert strings and set the curl ssl engine,
key type, and certtype if a valid pcks11 URI is found. This can be used
for Secure Elements or HSMs holding keys and certificates.

Signed-off-by: Matt Wood <matt.wood@microchip.com>

--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -161,9 +161,11 @@ identify : (
 # cafile		: string
 # 			  File with Public Certificate Authority
 # sslkey		: string
-#			  path of the file containing the key for ssl connection
+#			  path of the file containing the key for SSL connection or pkcs11 URI
+#                         (ex. "pkcs11:model=ATECC608B;token=0ABC;serial=0123456789abcdef;object=device;type=private")
 # sslcert		: string
-#			  path of the file containing the certificate for SSL connection
+#			  path of the file containing the certificate for SSL connection or pkcs11 URI
+                          (ex. "pkcs11:model=ATECC608B;token=0ABC;serial=0123456789abcdef;object=device;type=cert")
 # targettoken	: string
 #			  hawkBit target security token
 # gatewaytoken	: string
