gitignore: Ignore the swupdateclient artifacts
After building the swupdateclient tool, there are some files
that appear in the git status.

Add these files to the gitignore list.

Signed-off-by: Fabio Estevam <festevam@denx.de>

--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,10 @@ web-app/swupdate-www.tar.gz
 # ci
 !.gitlab-ci.yml
 !.github
+
+# swupdateclient
+Pipfile
+Pipfile.lock
+tools/python/swupdateclient/Pipfile.lock
+tools/python/swupdateclient/build/
+tools/python/swupdateclient/swupdateclient.egg-info/
