--- a/Kconfig
+++ b/Kconfig
@@ -193,18 +193,18 @@ config SW_VERSIONS_FILE
 	help
 	  This is an optional file that is scanned at the
 	  beginning to read the installed versions of
-	  all sw-components. Each entry in the file is a
+	  all sw-components. Each entry in the file is
 	  a pair of "name version".
 	  In sw-description,  an image can have the
 	  optional attributes:
 		"name" : key for searching in SW_VERSIONS_FILE
 		"version" : version contained in the .swu
-		"install-if-different" : if set, version
-	  		is compared with the one in SW_VERSIONS_FILE.
+		"install-if-different" : if set, the version
+			is compared with the one in SW_VERSIONS_FILE.
 	  The image is installed only if there is a version mismatch.
-	  This lets reduce risks in case of components that are not
-	  safe to be updated, such as the bootloader. Updating it is a risk,
-	  but in some cases it can be required to do it. Having a check,
+	  This reduces the risk in case of components that are not
+	  safe to update, such as the bootloader. Updating it is a risk,
+	  but in some cases it is required to do it. Having a check,
 	  the risky-component is not always updated.
 
 menu "Socket Paths"
@@ -224,7 +224,7 @@ config SOCKET_NOTIFIER_DIRECTORY
 	depends on HAVE_FREEBSD
 	default "/tmp/"
 	help
-	  Path to SWUpdate's Notifier sockets on FreeBSD as
+	  Path to SWUpdate's notifier sockets on FreeBSD as
 	  Linux-like abstract sockets are not available.
 
 endmenu
