Expose `retrywait` setting to downloader
Even though the downloader already counts with a retry-sleep logic that
adds a delay between failed retries, that option is not exposed to the user
via arguments.

Currently 0s is the default delay between failed attempts. In my experience,
when dealing with unstable connections, it is desirable to have some delay
between retries, to increase the chance of having a successful connection.

This patch sets the default delay to default 5s, and also gives the possibility
of the user to customize it via downloader's args and settings, as it is already
the case for SUricatta.

Signed-off-by: João Loureiro <joaofl@gmail.com>

--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -95,6 +95,8 @@ logcolors : {
 #			  it is the number of seconds that can be accepted without
 #			  receiving any packets. If it elapses, the connection is
 #			  considered broken.
+# retrywait		: integer
+#			  it is the number of seconds to wait between each failed attepm.
 # authentication	: string
 #			  credentials needed to get software if server
 #			  enables Basic Auth to allow this downloading
@@ -103,6 +105,7 @@ download :
 	authentication = "user:password";
 	retries = 3;
 	timeout = 1800;
+	retrywait	= 5;
 	url = "http://example.com/software.swu";
 	userid		= 1000;
 	groupid		= 1000;
