Reorganize includes to have smaller files
Some header file like util.h is definetly grown, and this can generate
dependencies between file. Try to cleanup this and move some definitions
to specific file. While all modules require util.h, just a few of them
require specific definitions.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/core/Makefile
+++ b/core/Makefile
@@ -13,6 +13,7 @@ obj-y += swupdate.o \
 	 notifier.o \
 	 handler.o \
 	 bootloader.o \
+	 hw-compatibility.o \
 	 install_from_file.o \
 	 util.o \
 	 parser.o \
