diskpart: add support for btrfs filesystem
This allows to link with a modified version of btrfs-tools, that makes
availale mkfs.btrfs as library and SWupdate can call it :

https://github.com/kdave/btrfs-progs/compare/master...sbabic:btrfs-progs:swupdate

Standard default parameters are taken, there is currently no support for btrfs
tuning.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/Makefile.deps
+++ b/Makefile.deps
@@ -66,6 +66,10 @@ ifeq ($(HAVE_LIBEXT2FS),)
 export HAVE_LIBEXT2FS = y
 endif
 
+ifeq ($(HAVE_LIBBTRFS),)
+export HAVE_LIBBTRFS = y
+endif
+
 ifeq ($(HAVE_LIBSSL),)
 export HAVE_LIBSSL = y
 endif
