--- a/Kconfig
+++ b/Kconfig
@@ -65,6 +65,10 @@ config HAVE_LIBEXT2FS
 	bool
 	option env="HAVE_LIBEXT2FS"
 
+config HAVE_LIBBTRFS
+	bool
+	option env="HAVE_LIBBTRFS"
+
 config HAVE_LIBZEROMQ
 	bool
 	option env="HAVE_LIBZEROMQ"
