handler: handler for operation on BTRFS
Add an handler that works as wrapper for libbtrfsutil and add support to
sw-description. Creation / deletion of subvolumes are supported.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/handlers/Makefile
+++ b/handlers/Makefile
@@ -10,6 +10,7 @@
 obj-y	+= dummy_handler.o chain_handler.o
 obj-$(CONFIG_ARCHIVE) += archive_handler.o
 obj-$(CONFIG_BOOTLOADERHANDLER) += boot_handler.o
+obj-$(CONFIG_BTRFS_FILESYSTEM) += btrfs_handler.o
 obj-$(CONFIG_COPY) += copy_handler.o
 obj-$(CONFIG_CFI)	+= flash_handler.o
 obj-$(CONFIG_DELTA)	+= delta_handler.o delta_downloader.o zchunk_range.o
