BTRFS: exec btrfs-tools if library is not available
It is planned and desired that libbtrfsutil will add the mkfs feature,
and this can get rid of patching btrfs-util. This remains an option, but
also add the (temporary) way to exec mkfs.btrfs in context of the
diskpart handler.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/fs/Config.in
+++ b/fs/Config.in
@@ -28,4 +28,16 @@ config BTRFS_FILESYSTEM
 
 comment "BTRFS file system creation support needs libbtrfs libbtrfsutil"
 	depends on !HAVE_LIBBTRFS
+
+config BTRFS_FILESYSTEM_USELIBMKFS
+	bool "Use modified source from btrfs tool to be linked as lib"
+	depends on HAVE_LIBBTRFS
+	default n
+	help
+	  This requires at the moment a patched version of btrfs-tool to export
+	  mkfs.btrf as library.
+
+comment "BTRFS file system creation support needs libbtrfs libbtrfsutil"
+	depends on !HAVE_LIBBTRFS
+
 endif
