--- a/Makefile.flags
+++ b/Makefile.flags
@@ -193,8 +193,12 @@ ifeq ($(CONFIG_EXT_FILESYSTEM),y)
 LDLIBS += ext2fs uuid blkid
 endif
 
+ifeq ($(CONFIG_BTRFS_FILESYSTEM_USELIBMKFS),y)
+LDLIBS += mkfsbtrfs
+endif
+
 ifeq ($(CONFIG_BTRFS_FILESYSTEM),y)
-LDLIBS += mkfsbtrfs btrfs btrfsutil udev
+LDLIBS += btrfs btrfsutil udev
 endif
 
 ifeq ($(CONFIG_UNIQUEUUID),y)
