--- a/Kconfig
+++ b/Kconfig
@@ -61,6 +61,10 @@ config HAVE_LIBEBGENV
        bool
        option env="HAVE_LIBEBGENV"
 
+config HAVE_LIBTEGRABOOT_TOOLS
+       bool
+       option env="HAVE_LIBTEGRABOOT_TOOLS"
+
 config HAVE_LIBEXT2FS
 	bool
 	option env="HAVE_LIBEXT2FS"
