--- a/.editorconfig
+++ b/.editorconfig
@@ -11,9 +11,10 @@ charset = utf-8
 end_of_line = lf
 insert_final_newline = true
 
-[CMakeLists.txt]
-indent_size = 2
-indent_style = space
+[Makefile]
+indent_style = tab
+indent_size = tab
+tab_width = 8
 
 [*.{c,h}]
 indent_brace_style = K&R
