--- a/suricatta/Makefile
+++ b/suricatta/Makefile
@@ -1,7 +1,7 @@
 # Copyright (C) 2014-2018 Stefano Babic <sbabic@denx.de>
 #
 # SPDX-License-Identifier:     GPL-2.0-only
-obj-$(CONFIG_SURICATTA) += suricatta.o common.o
+obj-$(CONFIG_SURICATTA) += suricatta.o
 ifneq ($(CONFIG_SURICATTA_HAWKBIT),)
 obj-$(CONFIG_SURICATTA) += server_hawkbit.o
 endif
