CI: fix test with suricatta module
Test failed because WFX module is not linked when all suricatta's
backend are enabled. Copy link flag from main Makefile to fix it.

Signed-off-by: Stefano Babic <stefano.babic@swupdate.org>

--- a/test/Makefile
+++ b/test/Makefile
@@ -38,6 +38,9 @@ targets   += $(addsuffix .o,   $(tests-y))
 ifneq ($(CONFIG_EXTRA_LDFLAGS),)
 EXTRA_LDFLAGS += $($(STRIP) $(subst ",,$(CONFIG_EXTRA_LDFLAGS)))#"))
 endif
+ifneq ($(CONFIG_EMBEDDED_SURICATTA_LUA),)
+EXTRA_LDFLAGS += -Wl,--format=binary -Wl,$(CONFIG_EMBEDDED_SURICATTA_LUA_SOURCE) -Wl,--format=default
+endif
 
 ## transfer __wrap_*() functions to according linker flags via rudimentary regex awk parsing,
 ## e.g. __wrap_channel_get becomes -Wl,--wrap=channel_get.
