--- a/configs/suricatta_all_modules_defconfig
+++ b/configs/suricatta_all_modules_defconfig
@@ -1,3 +1,5 @@
+# SPDX-FileCopyrightText: 2023 Stefano Babic <stefano.babic@swupdate.org>
+# SPDX-License-Identifier: CC0-1.0
 CONFIG_SYSTEMD=y
 CONFIG_HW_COMPATIBILITY=y
 CONFIG_LUAPKG="lua5.2"
