Add attribute in swupdate.cfg to get fw_env.config
Add a way to override the compile option CONFIG_UBOOT_FWENV at runtime.

Signed-off-by: Stefano Babic <stefano.babic@swupdate.org>

--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -48,10 +48,10 @@
 #			  Possible values are ebg, grub, uboot, and none for
 #			  EFI Boot Guard, U-Boot, GRUB, and the Environment in RAM bootloader,
 #			  respectively, given the respective bootloader support is compiled-in.
-#
 # namespace-vars	: namespace used by libubootenv for application/SWUpdate persistent
 #			  variables. This can be overridden in sw-description.
 #			  It is one set in libubootenv configuration file.
+# fwenv-config-location	: path of the configuration file for libubootenv
 globals :
 {
 
