Rename swupdate_decrypt to be consistent
Decrypt functions are in files with the name of the crypto engine
(swupdate=decrypt_mbedtls, etc.). Rename swupdate_decrypt to
swupdate_decrypt_openssl for consistency.

Signed-off-by: Stefano Babic <stefano.babic@swupdate.org>

--- a/corelib/Makefile
+++ b/corelib/Makefile
@@ -11,7 +11,7 @@ lib-$(CONFIG_HASH_VERIFY)	+= verify_signature.o
 ifeq ($(CONFIG_PKCS11),y)
 lib-$(CONFIG_ENCRYPTED_IMAGES)	+= swupdate_decrypt_pkcs11.o
 else
-lib-$(CONFIG_ENCRYPTED_IMAGES)	+= swupdate_decrypt.o
+lib-$(CONFIG_ENCRYPTED_IMAGES)	+= swupdate_decrypt_openssl.o
 endif
 lib-$(CONFIG_SIGALG_RAWRSA)	+= swupdate_rsa_verify.o
 lib-$(CONFIG_SIGALG_RSAPSS)	+= swupdate_rsa_verify.o
