Add delta download over ssl
Rename suricatta_channel_settings to be generic, update existing calls,
and add call in start_delta_downloader function.

Add delta update section in swupdate.cfg example.

Signed-off-by: Matt Wood <matt.wood@microchip.com>
Reviewed-by: Stefano Babic <stefano.babic@swupdate.org>

--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -169,10 +169,10 @@ identify : (
 # 			  File with Public Certificate Authority
 # sslkey		: string
 #			  path of the file containing the key for SSL connection or pkcs11 URI
-#                         (ex. "pkcs11:model=ATECC608B;token=0ABC;serial=0123456789abcdef;object=device;type=private")
+#			  ex. "pkcs11:model=ATECC608B;token=0ABC;serial=0123456789abcdef;object=device;type=private")
 # sslcert		: string
 #			  path of the file containing the certificate for SSL connection or pkcs11 URI
-                          (ex. "pkcs11:model=ATECC608B;token=0ABC;serial=0123456789abcdef;object=device;type=cert")
+#			  (ex. "pkcs11:model=ATECC608B;token=0ABC;serial=0123456789abcdef;object=device;type=cert")
 # targettoken	: string
 #			  hawkBit target security token
 # gatewaytoken	: string
@@ -267,4 +267,18 @@ webserver :
 	userid		= 1000;
 	groupid		= 1000;
 	timeout		= 20;
+};
+
+# delta update section
+#
+# sslkey		: string
+#			  path of the file containing the key for SSL connection or pkcs11 URI
+#			  (ex. "pkcs11:model=ATECC608B;token=0ABC;serial=0123456789abcdef;object=device;type=private")
+# sslcert		: string
+#			  path of the file containing the certificate for SSL connection or pkcs11 URI
+#			  (ex. "pkcs11:model=ATECC608B;token=0ABC;serial=0123456789abcdef;object=device;type=cert")
+delta :
+{
+	sslkey		= "/etc/ssl/sslkey";
+	sslcert		= "/etc/ssl/sslcert";
 };
