Set json support as mandatory
JSON is used in a lto of part of code, and it is quite always set. Make
it mandatory and always link SWUpdate to libjson. Cleanup code to remove
superseded CONFIG_JSON.

Signed-off-by: Stefano Babic <stefano.babic@swupdate.org>

--- a/Makefile.flags
+++ b/Makefile.flags
@@ -106,7 +106,7 @@ export SYSROOT=$(CONFIG_SYSROOT)
 endif
 
 # Links always pthread
-LDLIBS += pthread ubootenv
+LDLIBS += pthread ubootenv json-c
 # lua
 ifneq ($(CONFIG_LUA),)
 LDFLAGS_swupdate += -Wl,-E
@@ -142,11 +142,6 @@ endif
 # libarchive
 ifeq ($(CONFIG_ARCHIVE),y)
 LDLIBS += archive
-endif
-
-# json-c
-ifeq ($(CONFIG_JSON),y)
-LDLIBS += json-c
 endif
 
 ifeq ($(CONFIG_SSL_IMPL_OPENSSL),y)
