Lua Handler support if Lua is set
Drop CONFIG_HANDLER_IN_LUA and makes support available just if
CONFIG_LUA is set. This simplifies code removing #ifdef.

CONFIG_HANDLER_IN_LUA can reduce footprint, but the advantages are
negligible. The disadvantage is that SWUpdate should be recompiled again
to enable support if not foreseen initially.

Signed-off-by: Stefano Babic <stefano.babic@swupdate.org>

--- a/handlers/Config.in
+++ b/handlers/Config.in
@@ -116,17 +116,9 @@ config LUASCRIPTHANDLER
 	  Handler to be called for pre- and post scripts
 	  written in Lua.
 
-config HANDLER_IN_LUA
-	bool "Handlers in Lua"
-	depends on LUASCRIPTHANDLER
-	default n
-	help
-	  Allow to write own handlers in Lua.
-	  They are loaded at the start-up.
-
 config EMBEDDED_LUA_HANDLER
 	bool "Embed Lua handler in SWUpdate binary"
-	depends on HANDLER_IN_LUA
+	depends on LUA
 	default n
 	help
 	  Embed the Lua handler source code file into the
