--- a/configs/btrfs_defconfig
+++ b/configs/btrfs_defconfig
@@ -1,13 +1,15 @@
-# SPDX-FileCopyrightText: 2021 Stefano Babic <sbabic@denx.de>
+# SPDX-FileCopyrightText: 2023 Stefano Babic <sbabic@denx.de>
 # SPDX-License-Identifier: CC0-1.0
 CONFIG_HW_COMPATIBILITY=y
 CONFIG_LUAPKG="lua5.2"
 CONFIG_EXTRA_CFLAGS="-g"
+CONFIG_UBOOT=y
+CONFIG_BOOTLOADER_DEFAULT_NONE=y
+CONFIG_BOOTLOADER_STATIC_LINKED=y
 CONFIG_DOWNLOAD=y
 CONFIG_SURICATTA=y
 CONFIG_SURICATTA_SSL=y
 CONFIG_WEBSERVER=y
-CONFIG_MONGOOSESSL=y
 CONFIG_HASH_VERIFY=y
 CONFIG_ENCRYPTED_IMAGES=y
 CONFIG_ZSTD=y
@@ -15,12 +17,14 @@ CONFIG_LUAEXTERNAL=y
 CONFIG_ARCHIVE=y
 CONFIG_BOOTLOADERHANDLER=y
 CONFIG_CFI=y
+CONFIG_COPY=y
 CONFIG_DELTA=y
 CONFIG_DISKPART=y
 CONFIG_DISKPART_FORMAT=y
 CONFIG_DISKFORMAT_HANDLER=y
 CONFIG_FAT_FILESYSTEM=y
 CONFIG_EXT_FILESYSTEM=y
+CONFIG_BTRFS_FILESYSTEM=y
 CONFIG_LUASCRIPTHANDLER=y
 CONFIG_RAW=y
 CONFIG_RDIFFHANDLER=y
