--- a/configs/delta_defconfig
+++ b/configs/delta_defconfig
@@ -1,21 +1,33 @@
-# SPDX-FileCopyrightText: 2021 Stefano Babic <sbabic@denx.de>
+# SPDX-FileCopyrightText: 2023 Stefano Babic <sbabic@denx.de>
 # SPDX-License-Identifier: CC0-1.0
 CONFIG_HW_COMPATIBILITY=y
 # CONFIG_MTD is not set
-CONFIG_LUAPKG="lua5.2"
 CONFIG_EXTRA_CFLAGS="-g"
 CONFIG_DOWNLOAD=y
+CONFIG_DOWNLOAD_SSL=y
 CONFIG_SURICATTA=y
-CONFIG_SURICATTA_SSL=y
 CONFIG_WEBSERVER=y
 CONFIG_MONGOOSESSL=y
 CONFIG_HASH_VERIFY=y
 CONFIG_ENCRYPTED_IMAGES=y
+CONFIG_ZSTD=y
 CONFIG_LUAEXTERNAL=y
+CONFIG_SETEXTPARSERNAME=y
+CONFIG_EXTPARSERNAME="xmlparser.lua"
 CONFIG_ARCHIVE=y
 CONFIG_BOOTLOADERHANDLER=y
+CONFIG_DELTA=y
+CONFIG_DISKPART=y
+CONFIG_DISKPART_FORMAT=y
+CONFIG_DISKFORMAT_HANDLER=y
+CONFIG_FAT_FILESYSTEM=y
+CONFIG_EXT_FILESYSTEM=y
 CONFIG_LUASCRIPTHANDLER=y
 CONFIG_RAW=y
+CONFIG_RDIFFHANDLER=y
+CONFIG_READBACKHANDLER=y
 CONFIG_REMOTE_HANDLER=y
 CONFIG_SHELLSCRIPTHANDLER=y
 CONFIG_SWUFORWARDER_HANDLER=y
+CONFIG_UCFWHANDLER=y
+CONFIG_UNIQUEUUID=y
