Add support for docker
Start to add native support for containers. Implement the docker REST API
to load an image via the docker's socket. Add a docker handler that take
an image and push to the docker daemon. Following are implemented:

- Image load
- Image remove
. Container create - it takes a JSON configurazion file as input.
- Container delete

Signed-off-by: Stefano Babic <stefano.babic@swupdate.org>

--- a/handlers/Makefile
+++ b/handlers/Makefile
@@ -28,3 +28,4 @@ obj-$(CONFIG_SSBLSWITCH) += ssbl_handler.o
 obj-$(CONFIG_SWUFORWARDER_HANDLER) += swuforward_handler.o swuforward-ws.o
 obj-$(CONFIG_UBIVOL)	+= ubivol_handler.o
 obj-$(CONFIG_UCFWHANDLER)	+= ucfw_handler.o
+obj-$(CONFIG_DOCKER)	+= docker_handler.o
