--- a/Kconfig
+++ b/Kconfig
@@ -412,8 +412,8 @@ choice
 	config SSL_IMPL_WOLFSSL
 		bool "wolfSSL (with OpenSSL compatibility layer)"
 		depends on HAVE_WOLFSSL
-		select CMS_IGNORE_CERTIFICATE_PURPOSE
-		select CMS_SKIP_UNKNOWN_SIGNERS
+		select CMS_IGNORE_CERTIFICATE_PURPOSE if SIGALG_CMS
+		select CMS_SKIP_UNKNOWN_SIGNERS if SIGALG_CMS
 
 	config SSL_IMPL_MBEDTLS
 		bool "mbedTLS"
