doc: document the --gen-swversions (-s) parameter
Signed-off-by: Marcus Folkesson <marcus.folkesson@gmail.com>

--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -52,6 +52,7 @@
 #			  variables. This can be overridden in sw-description.
 #			  It is one set in libubootenv configuration file.
 # fwenv-config-location	: path of the configuration file for libubootenv
+# gen-swversions	: generate a version file containing all installed (versioned) images.
 globals :
 {
 
