downloader: allow common channel settings
The previous patch added max-download-speed so just add this one to
the config example, but using channel_settings() gets a few others
for free if someone ever requires setting them.

Signed-off-by: Dominique Martinet <dominique.martinet@atmark-techno.com>
Acked-by: Stefano Babic <stefano.babic@swupdate.org>

--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -105,11 +105,15 @@ logcolors : {
 # authentication	: string
 #			  credentials needed to get software if server
 #			  enables Basic Auth to allow this downloading
+# max-download-speed    : string
+#			  Specify maximum download speed to use. Value can be expressed as
+#			  B/s, kB/s, M/s, G/s. Example: 512k
 download :
 {
 	authentication = "user:password";
 	retries = 3;
 	timeout = 1800;
+	max-download-speed = "1M";
 	retrywait	= 5;
 	url = "http://example.com/software.swu";
 	userid		= 1000;
