docs: Fix statemachine.png git ignore path
doc/Makefile's genimages target generates doc/source/images/statemachine.png
instead of doc/statemachine.png.

Signed-off-by: Christian Storm <christian.storm@siemens.com>

--- a/.gitignore
+++ b/.gitignore
@@ -67,7 +67,7 @@ include/autoconf.h
 include/config/
 include/generated/
 doc/build
-doc/statemachine.png
+doc/source/images/statemachine.png
 
 # stgit generated dirs
 patches-*
