--- a/mongoose/Makefile
+++ b/mongoose/Makefile
@@ -6,7 +6,7 @@ ifneq ($(CONFIG_WEBSERVER),)
 ifneq ($(CONFIG_MONGOOSE),)
 KBUILD_CFLAGS += -DMG_ENABLE_DIRLIST=1
 KBUILD_CFLAGS += -DMG_ENABLE_EPOLL=1
-KBUILD_CFLAGS += -DMG_ENABLE_FILE=1
+KBUILD_CFLAGS += -DMG_ENABLE_POSIX_FS=1
 KBUILD_CFLAGS += -DMG_ENABLE_LOG=0
 KBUILD_CFLAGS += -DMG_ENABLE_MD5=1
 KBUILD_CFLAGS += -DMG_ENABLE_THREADS=1
