mongoose: Makefile: Rename MG_ENABLE_SSL with MG_TLS
Change was done with 7.0

Signed-off-by: Michael Glembotzki <Michael.Glembotzki@iris-sensing.com>

--- a/mongoose/Makefile
+++ b/mongoose/Makefile
@@ -15,13 +15,15 @@ ifneq ($(CONFIG_MONGOOSEIPV6),)
 KBUILD_CFLAGS += -DMG_ENABLE_IPV6=1
 endif
 ifneq ($(CONFIG_MONGOOSESSL),)
-KBUILD_CFLAGS += -DMG_ENABLE_SSL=1
+ifeq ($(CONFIG_SSL_IMPL_OPENSSL),y)
+KBUILD_CFLAGS += -DMG_TLS=2
 endif
-ifeq ($(CONFIG_SSL_IMPL_OPENSSL)$(CONFIG_SSL_IMPL_WOLFSSL),y)
-KBUILD_CFLAGS += -DMG_ENABLE_OPENSSL=1
+ifeq ($(CONFIG_SSL_IMPL_WOLFSSL),y)
+KBUILD_CFLAGS += -DMG_TLS=5
 endif
 ifeq ($(CONFIG_SSL_IMPL_MBEDTLS),y)
-KBUILD_CFLAGS += -DMG_ENABLE_MBEDTLS=1
+KBUILD_CFLAGS += -DMG_TLS=1
+endif
 endif
 endif
 endif
