--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,15 @@ ubuntu-jammy:
     - ./ci/setup.sh
     - ./ci/install-src-deps.sh
   script:
+    - ./ci/test-configs.sh
+
+ubuntu-noble:
+  image: ubuntu:noble
+  stage: build
+  before_script:
+    - ./ci/setup.sh
+    - ./ci/install-src-deps.sh
+  script:
     - if [ $CI_COMMIT_BRANCH == "coverity_scan" ]; then ./ci/coverity.sh;fi
     - ./ci/test-configs.sh
 
